=== HEAD

* Add Model.use_transactions for setting whether models should use transactions when destroying/saving records (jeremyevans, mjwillson)

* Deprecate Model::Validation::Errors, use Model::Errors (jeremyevans)

* Deprecate string inflection methods, require 'sequel/extensions/inflector' if you use them (jeremyevans)

* Deprecate Model validation class methods, override Model#validate instead or Model.plugin validation_class_methods (jeremyevans)

* Deprecate Model schema methods, use Model.plugin :schema (jeremyevans)

* Deprecate Model hook class methods, use instance methods instead or Model.plugin :hook_class_methods (jeremyevans)

* Deprecate Model.set_sti_key, use Model.plugin :single_table_inheritance (jeremyevans)

* Deprecate Model.set_cache, use Model.plugin :caching (jeremyevans)

* Move most model instance methods into Model::InstanceMethods, for easier overriding of instance methods for all models (jeremyevans)

* Move most model class methods into Model::ClassMethods, for easier overriding of class methods for all models (jeremyevans)

* Deprecate String#to_date, #to_datetime, #to_time, and #to_sequel_time, use require 'sequel/extensions/string_date_time' if you want them (jeremyevans)

* Deprecate Array#extract_options! and Object#is_one_of? (jeremyevans)

* Deprecate Object#meta_def, #meta_eval, and #metaclass (jeremyevans)

* Deprecate Module#class_def, #class_attr_overridable, #class_attr_reader, #metaalias, #metaattr_reader, and #metaatt_accessor (jeremyevans)

* Speed up the calling of most column accessor methods, and reduce memory overhead of creating them (jeremyevans)

* Deprecate Model#set_restricted using Model#[] if no setter method exists, a symbol is used, and the columns are not set (jeremyevans)

* Deprecate Model#set_with_params and #update_with_params (jeremyevans)

* Deprecate Model#save!, use Model.save(:validate=>false) (jeremyevans)

* Deprecate Model#dataset (jeremyevans)
