@@ -220,29 +220,28 @@ context "A PostgreSQL dataset" do
     @d.count.should == 2
   end
 
-  specify "should support nested transactions through savepoints" do
+  specify "should support nested transactions through savepoints using the savepoint option" do
     POSTGRES_DB.transaction do
       @d << {:name => '1'}
-      POSTGRES_DB.transaction do
+      POSTGRES_DB.transaction(:savepoint=>true) do
         @d << {:name => '2'}
         POSTGRES_DB.transaction do
           @d << {:name => '3'}
           raise Sequel::Error::Rollback
         end
-        @d << {:name => '4'}
-        POSTGRES_DB.transaction do
-          @d << {:name => '6'}
-          POSTGRES_DB.transaction do
-            @d << {:name => '7'}
-          end
+      end
+      @d << {:name => '4'}
+      POSTGRES_DB.transaction do
+        @d << {:name => '6'}
+        POSTGRES_DB.transaction(:savepoint=>true) do
+          @d << {:name => '7'}
           raise Sequel::Error::Rollback
         end
-        @d << {:name => '5'}
       end
+      @d << {:name => '5'}
     end
 
-    @d.count.should == 4
-    @d.order(:name).map(:name).should == %w{1 2 4 5}
+    @d.order(:name).map(:name).should == %w{1 4 5 6}
   end
 
   specify "should support regexps" do
